6722
@odersky However, you don't typecheck the program described in the comments of `depoly`. That comment was written by @adriaanm in https://github.com/scala/scala/commit/e557acb9#diff-7c03397456d3b987549fd039d6b639c6R237
```scala
trait A {
  type T
}

object O {
  implicit def b(implicit x: A): x.T = error("")
}

class Test {
  import O._
  implicit val a: A = new A {}
  implicitly[a.T]       // works in scalac, not in dotty

  implicitly[a.T](b(a)) // works
}
```
```
% qscalac sandbox/test.scala
warning: there was one deprecation warning; re-run with -deprecation for details
one warning found

% ../dotty/bin/dotc sandbox/test.scala
sandbox/test.scala:12: error: no implicit argument of type Test.this.a.T found for parameter e of method implicitly in object Predef$
  implicitly[a.T]       // works in scalac, not in dotty
                 ^
one error found
```

With regards to the bugs above, my hunch is that scalac could be fixed by using a `BoundedWildcardType` in `ApproximateDependentType`, rather than a `WildcardType`.
